Add auth system: Spring Security, JWT, Google OAuth2, Java 17 fixes, env-based secrets